samples/_failures_safe/1761040671_81a39b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bbc856a1.c: In function ‘main’:
./samples/SAFE/__tmp_bbc856a1.c:172:33: error: expected ‘]’ at end of input
  172 |     if (len > 0 && input[len - 1
      |                                 ^
      |                                 ]
./samples/SAFE/__tmp_bbc856a1.c:172:5: error: expected declaration or statement at end of input
  172 |     if (len > 0 && input[len - 1
      |     ^~
